--- a/main.css
+++ b/main.css
@@ -104,7 +104,7 @@ header{
     width: 100%;
     height: 100vh;
     background: linear-gradient(rgba(16, 29, 44, 0.95),rgb(16, 29, 43,.95))
-                ,url("/images/bg2.jpg") center no-repeat;
+                ,url("bg2.jpg") center no-repeat;
     background-size: cover;
     position: relative;
     color: white;
