--- a/main.css
+++ b/main.css
@@ -523,8 +523,8 @@ footer{
 
 /*Media*/
 @media  (max-width:992px){
-     *{
-        font-size: 0.8em;
+    h1{
+        font-size: 0.7em;
     }
     #contact img{
         display: none;
