--- a/main.css
+++ b/main.css
@@ -10,7 +10,10 @@ html{
     padding: 0;
     box-sizing: border-box;
 }
-
+body{
+    width: 100vw;
+    overflow-x: hidden;
+}
 a{
     color: white !important;
     text-decoration: none !important;
